// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - textarea renders correctly 1`] = `
<jest>
  <label
    class="form-label"
    for="example-textarea-1"
  >
    Example textarea
  </label>
  <textarea
    class="form-control form-control-sm"
    id="example-textarea-1"
    placeholder="Text here"
    rows="4"
  />
  <div
    class="form-text"
  >
    An helper text
  </div>
</jest>
`;

exports[`OE - textarea renders correctly when disabled 1`] = `
<jest>
  <label
    class="form-label"
    for="example-textarea-1"
  >
    Example textarea
  </label>
  <textarea
    class="form-control form-control-sm"
    disabled=""
    id="example-textarea-1"
    placeholder="Text here"
    rows="4"
  />
  <div
    class="form-text"
  >
    An helper text
  </div>
</jest>
`;

exports[`OE - textarea renders correctly when horizontal 1`] = `
<jest>
  <div
    class="row"
  >
    <label
      class="col-form-label col-sm-2"
      for="example-textarea-1"
    >
      Example textarea
    </label>
    <div
      class="col-sm-10"
    >
      <textarea
        class="form-control form-control-sm"
        id="example-textarea-1"
        placeholder="Text here"
        rows="4"
      />
    </div>
    <div
      class="form-text"
    >
      An helper text
    </div>
  </div>
</jest>
`;

exports[`OE - textarea renders correctly when invalid 1`] = `
<jest>
  <label
    class="form-label"
    for="example-textarea-1"
  >
    Example textarea
  </label>
  <textarea
    class="form-control form-control-sm is-invalid"
    id="example-textarea-1"
    placeholder="Text here"
    rows="4"
  />
  <div
    class="form-text"
  >
    An helper text
  </div>
</jest>
`;

exports[`OE - textarea renders correctly when readonly 1`] = `
<jest>
  <label
    class="form-label"
    for="example-textarea-1"
  >
    Example textarea
  </label>
  <textarea
    class="form-control form-control-sm"
    id="example-textarea-1"
    placeholder="Text here"
    readonly=""
    rows="4"
  />
  <div
    class="form-text"
  >
    An helper text
  </div>
</jest>
`;

exports[`OE - textarea renders correctly when required 1`] = `
<jest>
  <label
    class="form-label"
    for="example-textarea-1"
  >
    Example textarea
  </label>
  <textarea
    class="form-control form-control-sm"
    id="example-textarea-1"
    placeholder="Text here"
    required=""
    rows="4"
  />
  <div
    class="form-text"
  >
    An helper text
  </div>
</jest>
`;

exports[`OE - textarea renders correctly with floating label 1`] = `
<jest>
  <div
    class="form-floating"
  >
    <textarea
      class="form-control form-control-sm"
      id="example-textarea-1"
      placeholder="Text here"
      rows="4"
    />
    <label
      class="form-label"
      for="example-textarea-1"
    >
      Example textarea
    </label>
    <div
      class="form-text"
    >
      An helper text
    </div>
  </div>
</jest>
`;
